Update - fixed blur overlap ACTUALLY

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -3,7 +3,7 @@
 .container {
     display: flex;
     flex-direction: row;
-    z-index: 2;
+    z-index: 1;
 }
 
 .container2 {
@@ -26,6 +26,7 @@
     letter-spacing: 1px;
     text-transform: uppercase;
     z-index: 1;
+    position: relative;
 }
 
 .content {
