--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -15,6 +15,7 @@
     letter-spacing: 1px;
     text-transform: uppercase;
     z-index: 1;
+    position: relative;
 }
 
 .projects {
